deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 
  labels:
    app: nodeapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
        - name: nodeapp
          image: swe645/assignment2:dock_img
          ports:
            - containerPort: 80
