deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-example
spec:
  replicas: 3
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: swe645
    spec:
      containers:
      - name: swe645
        image: swe645/assignment2:dock_img
        ports:
        - containerPort: 80
