services.yml
kind: Service
apiVersion: v1
metadata:
  name: swe645service
spec:
  ports:
    - name: http
      port: 80
      nodePort: 30222
  selector:
    app: swe645
  type: LoadBalancer
