ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swe_645
  namespace: default
spec:
  rules:
  - host: swe.10.109.188.55.k8s.gigantic.io
    http:
      paths:
      - path: /
        backend:
          serviceName: my-app
          servicePort: 80
